--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ spacy = "*"
 python-dotenv = "*"
 django = "*"
 scikit-learn = "*"
+psycopg2-binary = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.8"
